rearranged commands into a remote group

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,7 @@ description-file=README.md
 
 [aliases]
 test=pytest
+
+[tool:pytest]
+addopts = --verbose
+python_files = tests/test_cli.py tests/test_readme.py
