--- a/.drone.yml
+++ b/.drone.yml
@@ -1,13 +1,6 @@
 pipeline:
   build:
-    image: golang
+    image: python:3
     commands:
-      - go get
-      - go build
-      - go test
-
-services:
-  postgres:
-    image: postgres:9.4.5
-    environment:
-      - POSTGRES_USER=myapp
+      - python setup.py bdist_wheel
+      - python setup.py test
