--- a/.drone.yml
+++ b/.drone.yml
@@ -9,9 +9,10 @@ pipeline:
       - python setup.py bdist_wheel
       - python setup.py test
 
-publish:
-  devpi:
-    server: http://192.168.0.40:3141/
-    index: root/public
-    username: root
-    password: 010310
+  publish:
+    image: plugins/drone-devpi
+    devpi:
+      server: http://192.168.0.40:3141/
+      index: root/public
+      username: root
+      password: 010310
