added version command

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 include README.md
 include requirements.txt
 include conda_reqs.txt
+recursive-include gittools/template_scripts *
+recursive-include gittools/git_hooks *
 recursive-include tests
