Devpi publish on drone

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,13 +6,19 @@ pipeline:
   build:
     image: python:3
     commands:
-      - python setup.py bdist_wheel
       - python setup.py test
+      - python setup.py bdist_wheel
+      - python setup.py sdist
+      - python setup.py sdist --formats=zip
 
   publish:
-    image: python:3
-    devpi:
-      server: http://192.168.0.40:3141/
-      index: dietzi/stable
-      username: dietzi
-      password: dietzi010310
+    image: shocki/drone-devpi
+    pull: true
+    server: http://192.168.0.40:3141/
+    index: dietzi/stable
+    username: dietzi
+    password: dietzi
+
+#    when:
+#      event: tag
+#      branch: master
