--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ pipeline:
       - python setup.py test
 
   build:
-    image: python 3
+    image: python:3
       - python setup.py bdist_wheel
       - python setup.py sdist
       - python setup.py sdist --formats=zip
