fixed missing commands in drone.yml

--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,7 @@ pipeline:
 
   build:
     image: python:3
+    commands:
       - python setup.py bdist_wheel
       - python setup.py sdist
       - python setup.py sdist --formats=zip
