--- a/setup.cfg
+++ b/setup.cfg
@@ -6,4 +6,4 @@ test=pytest
 
 [tool:pytest]
 addopts = --verbose
-python_files = tests/test_cli.py tests/test_readme.py
+python_files = tests/test_*.py
